--- a/src/public/css/custom.css
+++ b/src/public/css/custom.css
@@ -458,6 +458,7 @@ input[type="text"],
 input[type="number"],
 input[type="email"],
 input[type="date"],
+input[type="tel"],
 input[type="password"],
 select,
 textarea {
